--- a/src/main/webapp/Views/index.html
+++ b/src/main/webapp/Views/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script>
+        function validate() {
+            if($('#email').val()==''||$('#pwd').val()==''){
+                alert("Required fields empty!");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </head>
 <body>
 
@@ -14,7 +23,7 @@
     <h1>My First Bootstrap Page</h1>
     <p>This is some text.</p>
 </div>
-<form action="">
+<form action="" onclick="validate()">
     <div class="form-group">
         <label for="email">Email address:</label>
         <input type="email" class="form-control" id="email">
