--- a/src/main/webapp/Views/ajax.html
+++ b/src/main/webapp/Views/ajax.html
@@ -18,8 +18,10 @@
             data: 'name=' + $('#exampleInputEmail1').val(),
             dataType: 'text'
         }).done(function(data) {
+            console.log(data)
             alert(data);
         }).fail(function(err){
+            console.log(err)
             alert("err");
         });
     }
