--- a/src/main/webapp/Views/ajax.html
+++ b/src/main/webapp/Views/ajax.html
@@ -7,40 +7,26 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>AJAX</title>
 </head>
-<body>
+<body onload="getCity()">
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" ></script>
 
 <script>
-    function sendGreeting() {
+    function getCity() {
         $.ajax({
             type: 'GET',
-            url: 'http://localhost:8080/chapter_008_war/greet',
-            data: 'name=' + $('#exampleInputEmail1').val(),
-            dataType: 'text'
+            url: 'http://localhost:8080/chapter_008_war/city',
+            dataType: 'json'
         }).done(function(data) {
+            html = "";
+             for(var key in data) {
+                html += "<option value=" + key  + ">" +data[key] + "</option>"
+             }
+             document.getElementById("city").innerHTML = html;
             console.log(data)
-            alert(data);
         }).fail(function(err){
             console.log(err)
             alert("err");
         });
-    }
-</script>
-<script>
-    function sendf() {
-        $.ajax({
-            url: 'http://localhost:8080/chapter_008_war/greet',         /* Куда пойдет запрос */
-            method: 'get',             /* Метод передачи (post или get) */
-            dataType: 'html',          /* Тип данных в ответе (xml, json, script, html). */
-            data: {name: 'Текст'},     /* Параметры передаваемые в запросе. */
-            success: function(data){   /* функция которая будет выполнена после успешного запроса.  */
-                alert(data);            /* В переменной data содержится ответ от index.php. */
-            }
-        }).done(function () {
-            alert("done")
-        }).fail(function () {
-            alert("msg")
-        })
     }
 </script>
 
@@ -50,8 +36,17 @@
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
-        <button type="button" class="btn btn-primary" onclick="sendf()">Submit</button>
+        <button type="button" class="btn btn-primary" >Submit</button>
     </form>
 </div>
+
+
+<div>
+    <p id="test2"> This is another paragraph.</p>
+</div>
+
+<p></p>
+<select name="city" id="city">
+</select>
 </body>
 </html>
